phase2_Dev/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>No_of_Families_Rec_Case_Mgmt_Services__c</fullName>
        <description>Number of Families Receiving Case Management Services for Adoption Agencies</description>
        <inlineHelpText>Number of Families Receiving Case Management Services for Adoption Agencies</inlineHelpText>
        <label>No. of Families Rec Case Mgmt Services</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notify_for_Investigation_Conclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify for Investigation Conclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_Open_Complaints_Investigations__c</fullName>
        <label>Number Of Open Complaints Investigations</label>
        <summaryFilterItems>
            <field>Investigation__c.Related_To_Complaint_Case__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Investigation__c.Investigation_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Investigation__c.Provider_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Child_Assessments__c</fullName>
        <description>Number of Child Assessments for Adoption Agencies</description>
        <inlineHelpText>Number of Child Assessments for Adoption Agencies</inlineHelpText>
        <label>Number of Child Assessments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Children_Placed_in_Care__c</fullName>
        <inlineHelpText>For Foster Care Only</inlineHelpText>
        <label>No. of children currently in Placement</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Expired__c</fullName>
        <formula>IF( Is_Expired_Provider__c, TODAY() -  Renewal_date__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days Expired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Foster_Homes__c</fullName>
        <inlineHelpText>For Foster Care Only</inlineHelpText>
        <label>Number of Open Foster Homes</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Home_Study_Services__c</fullName>
        <description>Number of Home Study Services for Adoption Agencies</description>
        <inlineHelpText>Number of Home Study Services for Adoption Agencies</inlineHelpText>
        <label>Number of Home Study Services</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Foster_Homes__c</fullName>
        <label>Number of Open Foster Homes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Reunions_Facilitated__c</fullName>
        <description>Number of Reunions Facilitated for Adoption Agencies</description>
        <inlineHelpText>Number of Reunions Facilitated for Adoption Agencies</inlineHelpText>
        <label>Number of Reunions Facilitated</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Transaction__c</fullName>
        <label>Number of FCC New License Submitted</label>
        <summaryFilterItems>
            <field>Licensing_Transaction__c.Status__c</field>
            <operation>notEqual</operation>
            <value>To Submit, Closed (EEC Application Incomplete / Denied), Cancelled (by Applicant)</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Licensing_Transaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>FCC New License</value>
        </summaryFilterItems>
        <summaryForeignKey>Licensing_Transaction__c.Provider__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Waiting_Families__c</fullName>
        <description>Number of Waiting Families for Adoption Agencies</description>
        <inlineHelpText>Number of Waiting Families for Adoption Agencies</inlineHelpText>
        <label>Number of Waiting Families</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_sinks__c</fullName>
        <label>Number of sinks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_toilets__c</fullName>
        <label>Number of toilets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offsite_Outdoor_Play_Location__c</fullName>
        <label>Offsite Outdoor Play Location</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offsite_Outdoor_Play_Location_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offsite Outdoor Play Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Agency_That_Licensed__c</fullName>
        <description>Massachusetts agency that has approved this program</description>
        <inlineHelpText>Massachusetts agency that has approved this program</inlineHelpText>
        <label>Other Agency That Licensed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Approved_Additional_Space__c</fullName>
        <label>Other Approved Additional Space</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Countries__c</fullName>
        <label>Other Countries</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Referral_Agency__c</fullName>
        <label>Other Referral Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_state_childcare_related_licenses__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <inlineHelpText>Are any out of State child caring related licenses held by the applicant?</inlineHelpText>
        <label>Out of state childcare related licenses</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Out_of_state_license_appl_in_process__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <inlineHelpText>Are out of State child caring related license applications in process?</inlineHelpText>
        <label>Out of state license appl. in process</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outdoor_Compliance_with_ADA__c</fullName>
        <globalPicklist>Yes_No_Not_Sure</globalPicklist>
        <label>Outdoor Compliance with ADA</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outdoor_Square_footage__c</fullName>
        <label>Outdoor Square footage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_ID_for_Portal__c</fullName>
        <formula>Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner ID for Portal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPM_Meeting_Attended_Date__c</fullName>
        <label>PPM Meeting Attended Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PWS_Public_Water_Source_Number__c</fullName>
        <label>PWS (Public Water Source) Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Involvement_Responsible__c</fullName>
        <label>Parent Involvement Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personnel_Records_Responsible__c</fullName>
        <label>Personnel Records Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pool_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pool Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pool_roof_inspection_date__c</fullName>
        <label>Pool roof inspection date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Non-English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preschool_33_mo_K__c</fullName>
        <label>Preschool (33 mo - K)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preschool_SA_33_mo_8_yr__c</fullName>
        <label>Preschool/SA (33 mo - 8 yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Account_Owner__c</fullName>
        <label>Previous Account Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_License_Number__c</fullName>
        <label>Previous License Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Licensing_Visit_Reason__c</fullName>
        <inlineHelpText>Reason of the last licensing visit. Licensing visits are Pre-Licensing, Renewal - Full Review, Renewal - Enhanced Monitoring, Monitoring, Progress and Enhanced Monitoring. This field is automatically updated by the system when a visit is closed</inlineHelpText>
        <label>Previous Licensing Visit Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Type__c</fullName>
        <label>Previous Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Adoption__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Adoption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Age__c</fullName>
        <label>Program Age</label>
        <picklist>
            <picklistValues>
                <fullName>Adolescent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_licensed_or_approved_by_agency__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is program licensed or approved by any other Massachusetts agency?</inlineHelpText>
        <label>Program licensed or approved by agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provide_Transportation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provide Transportation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_Address_1__c</fullName>
        <description>Provider Address Line 1</description>
        <label>Street Address 1</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Address_2__c</fullName>
        <description>Second line of Provider Address</description>
        <label>Street Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_City__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Provider City</description>
        <inlineHelpText>Select a valid town / city from Massachusetts</inlineHelpText>
        <label>City</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>City__c.State__c</field>
                <operation>equals</operation>
                <valueField>$Source.State__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Providers</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_Email_Template_Main_Contact__c</fullName>
        <description>This field is used in the Email Templates to Provider Email</description>
        <formula>IF(OR(RecordType.DeveloperName = &apos;FCC&apos;,  RecordType.Name = &quot;FCC Assistant&quot;), IF(NOT(ISBLANK(FCC_Main_Contact_Licensee__c)),FCC_Main_Contact_Licensee__c, &apos;Educator&apos;),
&quot;Provider&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Email Template Main Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Provider_Full_Address__c</fullName>
        <description>This field is used in some documents for printing.</description>
        <formula>Provider_Address_1__c &amp; IF(ISBLANK(Provider_Address_2__c),&quot;&quot;, &quot;, &quot; &amp; Provider_Address_2__c) &amp; &quot;, &quot; &amp;   Provider_City__r.Name &amp; &quot;, &quot; &amp;  TEXT(State__c) &amp; &quot; &quot; &amp;  Provider_Zip_Code__c</formula>
        <label>Provider Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Location__c</fullName>
        <label>Provider Location</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Provider_No__c</fullName>
        <description>Provider Number.  Begins with &quot;8&quot; for licensed Providers and &quot;5&quot; for unlicensed Providers</description>
        <externalId>true</externalId>
        <label>Legacy System Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Provider_Number__c</fullName>
        <displayFormat>P-{00000}</displayFormat>
        <label>Provider Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Provider_Status_Search__c</fullName>
        <description>This field is used to make Provider Status searchable. It is used in conjunction with the Provider Update process flow.</description>
        <label>Provider Status Search</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Status__c</fullName>
        <description>Provider.Status</description>
        <label>Provider Status</label>
        <picklist>
            <controllingField>License_Status__c</controllingField>
            <picklistValues>
                <fullName>Application To Be Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended to PPM Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New application in progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal in progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Enrollment Freeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlicensed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Withdrawn / Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-open in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Status under review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provider_Zip_Code__c</fullName>
        <description>Provider Address Zip Code</description>
        <label>Zip Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_city_text__c</fullName>
        <formula>Provider_City__r.Name</formula>
        <label>Provider_city_text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Approval_Formula__c</fullName>
        <description>Public approval checkbox = True, if Public approval on associated Umbrella is True. 
Public approval checkbox = False, if Public approval on associated Umbrella is False.</description>
        <formula>Umbrella_Members__r.Public_Approval__c</formula>
        <label>Public Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the public approve?</inlineHelpText>
        <label>Public Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_on_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish on Web</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>American Indian/Alaskan Native</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black/African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Hawaiian/Other Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ratio_Comment__c</fullName>
        <label>Ratio Comment</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ratios__c</fullName>
        <inlineHelpText>Ratios for Group Care / Temporary Shelter Only</inlineHelpText>
        <label>Ratios</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Records_Responsible__c</fullName>
        <label>Records Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recving_search_and_or_reunion_services__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <inlineHelpText>Do you provide Receiving Search and / or Reunion Services?</inlineHelpText>
        <label>Recving search and or reunion services</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_Agency_Picklist__c</fullName>
        <label>Referral Agency</label>
        <picklist>
            <picklistValues>
                <fullName>DCF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Referral_Agency__c</fullName>
        <label>Referral Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referral Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Address__c</fullName>
        <description>Region Address to be used in Email Templates.</description>
        <formula>Region__r.Street__c &amp; &quot;, &quot; &amp;   Region__r.City__c  &amp; &quot;, &quot; &amp;   Region__r.State__c  &amp; &quot; &quot; &amp;  Region__r.Zip__c</formula>
        <label>Region Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Email__c</fullName>
        <description>Region Email address to be used in Email Templates.</description>
        <formula>Region__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Fax__c</fullName>
        <description>Fax number associated with the Region, to be used in Email Templates.</description>
        <formula>Region__r.Fax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Phone__c</fullName>
        <description>This field is the region phone number and is used in email templates.</description>
        <formula>Region__r.Phone__c</formula>
        <label>Region Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Region this provider is assigned to</description>
        <label>Licensing Region</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Region__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Licensing Region</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Providers</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regulatory_Status__c</fullName>
        <label>Regulatory Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Meeting_attended_Date__c</fullName>
        <label>Last Renewal Meeting Attended Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Restraint_Method__c</fullName>
        <label>Restraint Method</label>
        <picklist>
            <picklistValues>
                <fullName>ANV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PART</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOLVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAPPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NonRestraint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OWN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Varied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Restraint_Report_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restraint Report Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Age_5_yr_14_yr__c</fullName>
        <label>School Age (5 yr - 14 yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Age_Responsible__c</fullName>
        <label>School Age Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Year_From__c</fullName>
        <globalPicklist>Months_of_Year</globalPicklist>
        <label>School Year From</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School_Year_To__c</fullName>
        <globalPicklist>Months_of_Year</globalPicklist>
        <label>School Year - To</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secured_Facility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secured Facility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_for_Children_w_Disability_Resp__c</fullName>
        <label>Services for Children w/Disability Resp.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Services_Responsible__c</fullName>
        <label>Social Services Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialties__c</fullName>
        <label>Specialties</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Staff_Development_Responsible__c</fullName>
        <label>Staff Development Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Orientation_Responsible__c</fullName>
        <label>Staff Orientation Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Schedules_Responsible__c</fullName>
        <label>Staff Schedules Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Supervision_Responsible__c</fullName>
        <label>Staff Supervision Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Training_Responsible__c</fullName>
        <label>Staff Training Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Renewal_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is check by the daily Renewal batch if Expiration Date of the license is in 120 days. When checked, it&apos;ll trigger a workflow that sends emails / reminders</description>
        <label>Start Renewal Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Federal_investigation_last_5_years__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <inlineHelpText>Has the applicant or its officers been the subject of state or federal investigations with respect to the provision of child care services during the five years prior to the date of application?</inlineHelpText>
        <label>State/Federal investigation last 5 years</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_For_Mailing__c</fullName>
        <description>City from the Mailing Address if one is available for provider, else the provider&apos;s City</description>
        <formula>IF( ISBLANK(ShippingState), text( State__c ),  ShippingState )</formula>
        <inlineHelpText>City from the Mailing Address if one is available for provider, else the provider&apos;s City</inlineHelpText>
        <label>State For Mailing</label>
        <type>Text</type>
    </fields>
</CustomObject>